01-setup-files/model-httproute-example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-http-route
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agentgateway-proxy
    namespace: agentgateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
      headers:
        - type: RegularExpression
          name: x-model
          value: <model-release-name> # Change to vllm release name
    backendRefs:
    - name: model-release-agentgateway-backend
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
